crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__arguments__missing_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/arguments/missing_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            28,
        ),
        range: 0..38,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        5,
                    ),
                    range: 0..10,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(
                                4,
                            ),
                            range: 0..10,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        1,
                                    ),
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..10,
                                node_index: NodeIndex(
                                    3,
                                ),
                                args: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(
                                                2,
                                            ),
                                            range: 8..9,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        15,
                    ),
                    range: 11..21,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(
                                14,
                            ),
                            range: 11..21,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        7,
                                    ),
                                    range: 11..15,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 15..21,
                                node_index: NodeIndex(
                                    13,
                                ),
                                args: [],
                                keywords: [
                                    Keyword {
                                        range: 16..19,
                                        node_index: NodeIndex(
                                            12,
                                        ),
                                        arg: Some(
                                            Identifier {
                                                id: Name("x"),
                                                range: 16..17,
                                                node_index: NodeIndex(
                                                    10,
                                                ),
                                            },
                                        ),
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    11,
                                                ),
                                                range: 19..19,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        24,
                    ),
                    range: 22..32,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(
                                23,
                            ),
                            range: 22..32,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        17,
                                    ),
                                    range: 22..26,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 26..32,
                                node_index: NodeIndex(
                                    22,
                                ),
                                args: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(
                                                19,
                                            ),
                                            range: 27..28,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(
                                                        18,
                                                    ),
                                                    range: 28..28,
                                                    id: Name(""),
                                                    ctx: Invalid,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                21,
                                            ),
                                            range: 30..31,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        27,
                    ),
                    range: 34..37,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                26,
                            ),
                            range: 34..37,
                            id: Name("foo"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call( = 1)
  |       ^ Syntax Error: Expected an expression or a ')'
2 | call(x = )
3 | call(*, y)
  |


  |
1 | call( = 1)
2 | call(x = )
  |          ^ Syntax Error: Expected an expression
3 | call(*, y)
  |


  |
1 | call( = 1)
2 | call(x = )
3 | call(*, y)
  |       ^ Syntax Error: Expected an expression
4 |
5 | foo
  |
